--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@ body{
     min-height: 100vh;
     font-family: 'Open Sans', sans-serif;
     flex-wrap: wrap;
+    overflow-x: hidden;
 }
 
 .container {
@@ -78,4 +79,8 @@ body{
 .image-container > img{
     width: 100%;
     height: auto;
+}
+
+.hidden{
+    display: none;
 }
