--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,15 +79,15 @@ body{
 
 .header-img{
     display: flex;
-    flex-direction: column;
     width: 100%;
     height: auto;
     padding: 10px 10px;
 }
 
 .header-img h3{
+    width: 100%;
     display: flex;
-    align-items: center;
+    text-align: center;
 }
 
 .header-img span{
@@ -98,6 +98,7 @@ body{
 .image-container > img{
     width: 100%;
     height: auto;
+    text-align: center;
 }
 
 .container > img{
@@ -127,6 +128,9 @@ body{
         width: 100%;
         height: auto;
         max-height: 600px;
+    }
+    .container{
+        width: 80%;
     }
   }
 
