--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,7 +52,7 @@ body{
 	font-family: inherit;
 	font-size: 14px;
 	padding: 10px;
-	width: 100%;
+	width: 90%;
 }
 
 .form button {
@@ -66,6 +66,7 @@ body{
 	padding: 10px;
 	margin-top: 20px;
 	width: 100%;
+    cursor: pointer;
 }
 
 .image-container{
