--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,11 +131,19 @@ body{
         width: 100%;
         height: auto;
         max-height: 600px;
+        margin-top: 10px;
     }
     .container{
         width: 80%;
+        height: 60%;
     }
   }
+@media only screen and (max-width: 600px) {
+    .header{
+        height: 100px;
+    }
+}
+
 
 @media only screen and (max-width: 400px) {
     .image-container{
