login and register error messages added -bonus-

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,6 +124,11 @@ body{
     font-weight: bolder;
 }
 
+.green{
+    color: green;
+    font-weight: bolder;
+}
+
 /* Responsitivity */
 
 @media only screen and (max-width: 800px) {
